--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "all-contrib": "all-contributors"
   },
   "devDependencies": {
-    "@swc/jest": "^0.2.12",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.9",
-    "all-contributors-cli": "^6.20.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "got": "^12.4.1",
-    "husky": "^7.0.2",
-    "jest": "^27.2.5",
-    "lerna": "^5.5.0",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.30",
+    "all-contributors-cli": "^6.26.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "got": "^14.2.1",
+    "husky": "^9.0.11",
+    "jest": "^30.0.0-alpha.1",
+    "lerna": "^8.1.2",
     "prettier": "^3.2.5",
-    "pretty-quick": "^3.1.1",
-    "typescript": "4.8.2"
+    "pretty-quick": "^4.0.0",
+    "typescript": "5.4.3"
   },
   "jest": {
     "projects": [
